[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "longbridge-platform"
version = "0.3.0"
description = "QuantStrategyLab platform layer for LongBridge broker."
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "requests",
    "pytz",
    "pandas-market-calendars",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "google-auth",
    "longport==3.0.23",
    "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@7032cde4547e7ec59af15df8935d142461a77051",
    "us-equity-strategies @ git+https://github.com/QuantStrategyLab/UsEquityStrategies.git@9f0e5e2deca8a9c16d711eb4772f08a7901da101",
    "hk-equity-strategies @ git+https://github.com/QuantStrategyLab/HkEquityStrategies.git@dbbefb688cd144837aa59581b1930a14c11411ad",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/external/*"]

[tool.coverage.report]
show_missing = true

[tool.setuptools]
py-modules = [
  "decision_mapper",
  "main",
  "runtime_config_support",
  "runtime_execution_policy",
  "runtime_logging",
  "strategy_loader",
  "strategy_registry",
  "strategy_runtime",
]

[tool.setuptools.packages.find]
include = [
  "application*",
  "entrypoints*",
  "notifications*",
  "scripts*",
  "strategy*",
]
