[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "longbridge-platform"
version = "0.3.0"
description = "QuantStrategyLab platform layer for LongBridge broker."
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "requests",
    "pytz",
    "pandas-market-calendars",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "google-auth",
    "longport==3.0.23",
    "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@37c81901160c5b31127a27dba1c63944933fb6bf",
    "us-equity-strategies @ git+https://github.com/QuantStrategyLab/UsEquityStrategies.git@17ddb86c72d44b2c7b78ba7a10d8f71b21180166",
    "hk-equity-strategies @ git+https://github.com/QuantStrategyLab/HkEquityStrategies.git@b6a8ac2ad3c8110b5ea74fb059c8206388d63bcd",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/external/*"]

[tool.coverage.report]
show_missing = true

[tool.setuptools]
py-modules = [
  "decision_mapper",
  "main",
  "runtime_config_support",
  "runtime_execution_policy",
  "runtime_logging",
  "strategy_loader",
  "strategy_registry",
  "strategy_runtime",
]

[tool.setuptools.packages.find]
include = [
  "application*",
  "entrypoints*",
  "notifications*",
  "scripts*",
  "strategy*",
]
